stop horizontal overflow issue with website

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ main {
 } 
 
 .menu-container { 
-    width: 100vw; 
+    width: 90; 
 }
 .vertical-menu-L { 
     float: left;
